<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_welcome_text_view"
            style="@style/Widget.AppTheme.TextView.Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"

            app:layout_constraintBottom_toTopOf="@+id/login_welcome_message_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/login_welcome_message_text_view"
            style="@style/Widget.AppTheme.TextView.Content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/login_info"

            app:layout_constraintBottom_toTopOf="@+id/login_login_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_welcome_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_login_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"

            app:layout_constraintBottom_toTopOf="@+id/login_password_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_welcome_message_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_login_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_input_layout"
            style="@style/Widget.AppTheme.TextInputLayout.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"

            app:layout_constraintBottom_toTopOf="@+id/login_error_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_error_text_view"
            style="@style/Widget.AppTheme.TextView.Content1.Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"

            app:layout_constraintBottom_toTopOf="@id/login_enter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_text_input_layout"
            tools:text="Что-то пошло не так, попробуйте войти позже" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_enter_button"
            style="@style/Widget.AppTheme.MaterialButton.Orange"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:text="@string/button_login_enter"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>